# tvtrack

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh  run.sh.template  setup.sql  todo.txt  tvtrack.config.json.template
data/: .gitignore  tvtrack.config.json.template
email/: notes.txt  updates.html
src/: add.rs  cli.rs  config.rs  context.rs  db.rs  lib.rs  main.rs  notify.rs  poster.rs  result.rs  state.rs  tmdb.rs  update.rs
src/db/: mod.rs  poster.rs  series.rs  table_model.rs  user.rs
src/notify/: email_html.rs  entry.rs  mod.rs
src/tmdb/: client.rs  episode.rs  mime_type.rs  mod.rs  optional_date.rs  poster.rs  result.rs  search.rs  series.rs
tmdb-api-docs/: configuration.txt  find-by-external-id.txt  search-tv.txt  tv-season-details.txt  tv-series-changes.txt  tv-series-details-3BodyProblem.txt  tv-series-details-Elsbeth.txt
