[package]
name = "tvtrack"
version = "0.1.0"
edition = "2021"

default-run = "tvtrack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
env_logger = "0.11.5"
lettre = "0.11.7"
log = "0.4.22"
rusqlite = { version = "0.31.0", features = ["serde_json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
strum = { version = "0.26.2", features = ["derive"] }
ureq = "2.9.7"
