[package]
name = "tvtrack"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
default-run = "tvtrack"

[dependencies]
anyhow = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11" }
lettre = { version = "0.11" }
log = { version = "0.4" }
rusqlite = { version = "0.34", features = ["serde_json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.26", features = ["derive"] }
ureq = { version = "3.0" }
